# rust-http-server-example

./: Cargo.toml  README.md  web_socket_test.html
src/: handlers.rs  listen.rs  main.rs
src/cert_reslover/: mod.rs  reslover.rs
